--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
   
   <header>
-    <img class="Cover" src="images/cover.jpeg" alt="cover photo" width="100%" />
+    <img class="Cover" src="images/Cover.jpeg" alt="cover photo" width="100%" />
   <nav>
      <a class="Item" href="Index.html">Home</a>
     <a class="item" href="poetry.html">Poetry</a>
@@ -96,7 +96,7 @@
 <h1 class="intro heading" lang="ur">وفات</h1>
 <p class="intro" lang="ur">آپ 15 فروری 1869 کو دہلی میں وفات پا گئے</p>
   <br> <hr />
-  <img class="Poet" src="Images/faiz.jpg" alt="An img" width="100px" />
+  <img class="Poet" src="Images/Faiz.jpg" alt="An img" width="100px" />
 <h1 class="intro heading" lang="ur">نام</h1>
 <p class="intro" lang="ur">فیض احمد فیض</p>
 
