--- a/info.html
+++ b/info.html
@@ -18,7 +18,7 @@
   <header>
     <img class="Cover" src="images/cover.jpeg" alt="cover photo" width="100%" />
   <nav>
-    <a class="Item" href="Index.html">Home</a>
+    <a class="Item" href="index.html">Home</a>
     <a class="item" href="poetry.html">Poetry</a>
     <a class="item"href="Quotes.html">Quotes</a>
     <a class="item" href="Favourite.html">Favorite</a>
@@ -45,7 +45,7 @@
 <h1 class="intro heading" lang="ur">وفات</h1>
 <p class="intro" lang="ur">آپ 15 فروری 1869 کو دہلی میں وفات پا گئے</p>
   <br> <hr />
-  <img class="Poet" src="Images/faiz.jpg" alt="An img" width="100px" />
+  <img class="Poet" src="Images/Faiz.jpg" alt="An img" width="100px" />
 <h1 class="intro heading" lang="ur">نام</h1>
 <p class="intro" lang="ur">فیض احمد فیض</p>
 
@@ -84,7 +84,7 @@
 <p class="intro" lang="ur">آپ 8 نومبر 2002 کو کراچی میں وفات پا گئے</p>
 
 <hr />
-<img class="Poet" src="Images/Faraz.jpg" alt="An img" width="100px" />
+<img class="Poet" src="Images/faraz.jpg" alt="An img" width="100px" />
 <h1 class="intro heading" lang="ur">نام</h1>
 <p class="intro" lang="ur">احمد فراز</p>
 
@@ -112,7 +112,7 @@
 <p class="intro" lang="ur">آپ 30 ستمبر 1914 کو پانی پت میں وفات پا گئے</p>
 
 <hr />
-<img class="Poet" src="Images/Parveen.jpg" alt="An img" width="100px" />
+<img class="Poet" src="Images/parveen.jpg" alt="An img" width="100px" />
 <h1 class="intro heading" lang="ur">نام</h1>
 <p class="intro" lang="ur">پروین شاکر</p>
 
