--- a/info_2.html
+++ b/info_2.html
@@ -33,7 +33,7 @@
   <section class="poets">
   <fieldset>
  <!-- جوش ملیح آبادی -->
-<img class="Poet" src="Images/Josh.jpeg" alt="An img" width="100px" />
+<img class="Poet" src="Images/josh.jpeg" alt="An img" width="100px" />
 <h1 class="intro heading" lang="ur">نام</h1>
 <p class="intro" lang="ur">جوش ملیح آبادی</p>
 
@@ -97,7 +97,7 @@
 <hr />
 
 <!-- فراق گورکھپوری -->
-<img class="Poet" src="Images/Firaq.jpeg" alt="An img" width="100px" />
+<img class="Poet" src="Images/firaq.jpeg" alt="An img" width="100px" />
 <h1 class="intro heading" lang="ur">نام</h1>
 <p class="intro" lang="ur">فراق گورکھپوری</p>
 
