--- a/About.html
+++ b/About.html
@@ -99,7 +99,7 @@
     </div>
     <p>|</p>
     <div class="whatsapp">
-  <img src="Images/whatsapp.png" alt="Whatsapp icon" class="social_icon"><a href="https://wa.me/03378677062?text=السلام علیکم! مجھے اردو ادب سے متعلق معلومات درکار ہے۔">Whatsapp</a>
+  <img src="Images/Whatsapp.png" alt="Whatsapp icon" class="social_icon"><a href="https://wa.me/03378677062?text=السلام علیکم! مجھے اردو ادب سے متعلق معلومات درکار ہے۔">Whatsapp</a>
     </div>
   </div>
     <h6>Web Developer | Graphic Designer | Mathematician</h6>
