--- a/About.html
+++ b/About.html
@@ -127,7 +127,7 @@
     </div>
     <p>|</p>
     <div class="whatsapp">
-  <img src="Images/whatsapp.png" alt="Whatsapp icon" class="social_icon"><a href="https://wa.me/03357889660">Whatsapp</a>
+  <img src="Images/Whatsapp.png" alt="Whatsapp icon" class="social_icon"><a href="https://wa.me/03357889660">Whatsapp</a>
     </div>
   </div>
     <h6>Web Developer | Graphic Designer | Mathematician</h6>
