--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     <img class="Cover" src="Images/Cover.jpeg" alt="cover photo" width="100%" />
   <nav>
-     <a class="Item" href="Index.html">Home</a>
+     <a class="Item" href="index.html">Home</a>
     <a class="item" href="poetry.html">Poetry</a>
     <a class="item"href="Quotes.html">Quotes</a>
     <a class="item" href="Favourite.html">Favorite</a>
