--- a/info.html
+++ b/info.html
@@ -170,7 +170,7 @@
 <hr />
 <div class="buttons">
 <a class="button box-1" href="info.html">1</a>
-<a class="button box-2" href="Info_2.html">2</a>
+<a class="button box-2" href="info_2.html">2</a>
 <a class="button box-3" href="info_3.html">3</a>
 <a class="button box-4" href="info_4.html">4</a>
 <a class="button box-5" href="info_5.html">5</a>
