--- a/info_4.html
+++ b/info_4.html
@@ -15,9 +15,9 @@
   
   
   <header>
-    <img class="Cover" src="images/cover.jpeg" alt="cover photo" width="100%" />
+    <img class="Cover" src="images/Cover.jpeg" alt="cover photo" width="100%" />
   <nav>
-    <a class="Item" href="Index.html">Home</a>
+    <a class="Item" href="index.html">Home</a>
     <a class="item" href="poetry.html">Poetry</a>
     <a class="item"href="Quotes.html">Quotes</a>
     <a class="item" href="Favourite.html">Favorite</a>
@@ -164,7 +164,7 @@
 <div class="buttons">
 <a href="info_3.html" class="button Prev">Prev</a>
 <a class="button box-1" href="info.html">1</a>
-<a class="button box-2" href="Info_2.html">2</a>
+<a class="button box-2" href="info_2.html">2</a>
 <a class="button box-3" href="info_3.html">3</a>
 <a class="button box-4" href="info_4.html">4</a>
 <a class="button box-5" href="info_5.html">5</a>
