--- a/info_4.html
+++ b/info_4.html
@@ -15,7 +15,7 @@
   
   
   <header>
-    <img class="Cover" src="images/Cover.jpeg" alt="cover photo" width="100%" />
+    <img class="Cover" src="Images/Cover.jpeg" alt="cover photo" width="100%" />
   <nav>
     <a class="Item" href="index.html">Home</a>
     <a class="item" href="poetry.html">Poetry</a>
