--- a/poetry.html
+++ b/poetry.html
@@ -26,15 +26,15 @@ nav{
   border:3px solid #087975;
   border-radius: 50px;
   margin: 0px;
-  padding:10px;
+  padding:20px 50px;
   position:relative;
 }
 nav a{
   color:white;
   text-align-last: Center;
   text-decoration: none;
-  font-size: 14px;
-  padding:7px;
+  font-size: 4ppx;
+  padding:15px;
 }
 nav a:hover{
   background-color: white;
@@ -83,7 +83,7 @@ nav a:active{
   
   
   <header>
-    <img class="Cover" src="images/cover.jpeg" alt="cover photo" width="100%" />
+    <img class="Cover" src="Images/cover.jpeg" alt="cover photo" width="100%" />
   <nav>
      <a class="Item" href="index.html">Home</a>
     <a class="item" href="poetry.html">Poetry</a>
