--- a/poetry.html
+++ b/poetry.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Home | Urdu Adab</title>
+<title>Poetry | Urdu Adab</title>
 <style type="text/css" media="all">
   body{
   background: linear-gradient(to right,#9b7dee,#3b1bb9);
@@ -83,7 +83,7 @@ nav a:active{
   
   
   <header>
-    <img class="Cover" src="Images/cover.jpeg" alt="cover photo" width="100%" />
+    <img class="Cover" src="Images/Cover.jpeg" alt="cover photo" width="100%" />
   <nav>
      <a class="Item" href="index.html">Home</a>
     <a class="item" href="poetry.html">Poetry</a>
