--- a/poetry.html
+++ b/poetry.html
@@ -33,7 +33,7 @@ nav a{
   color:white;
   text-align-last: Center;
   text-decoration: none;
-  font-size: 4ppx;
+  font-size: 40px;
   padding:15px;
 }
 nav a:hover{
