--- a/Favourite.html
+++ b/Favourite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Home | Urdu Adab</title>
+<title>Favorite | Urdu Adab</title>
 <link rel="stylesheet" href="Stylesheets/fav.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
   </header>
   <br />
   <br />
-  <h2 class="first">You have no favorite <br />
-  Once you add favorite, those will appear here.</h2>
+  <h1 class="first">You have no favorite <br />
+  Once you add favorite, those will appear here.</h1>
     </body>
   </html>
