--- a/index.html
+++ b/index.html
@@ -47,7 +47,29 @@
     </div>
     <hr>
   <span>For more info</span> 
- <a class="See-more" href="poetry.html">See All</a>
+ <a class="See-more" href="poetry.html">See All</a>   
+    </fieldset>
+  <br>
+  <fieldset class="four">
+  <legend class="Main" lang="ur">مختصر پر اثر</legend>
+  <p lang="ur">باتوں کو برداشت کرنے کی عادت پیدا کریں ہر بات محسوس کرنا اور موڈ خراب کر لینا بیمار دل کی علامت ہے</p>
+  <div class="emoji">🤕🫀🍂</div>
+  <hr />
+  <p lang="ur">ریـاضتوں کا صلہ صرف اللّٰہ کی محبت میں ملتا ہے بندے کب آپ کو دو کوڑی کا کر دیں کیا بھروسہ ہے</p>
+  <div class="emoji">🫀🤲✨</div>
+  <hr />
+  <p lang="ur">انا اندھـیرا ہے اور اللّٰہ نور السموات والارض ہے۔
+اور تم نور سے اندھیرا بن کر نہیں مل سکتے۔</p>
+  <div class="emoji">💐🦋✨</div>
+  <hr />
+  <p lang="ur">خوب وہ نہیں ہوتے جو ہم سوتے وقت دیکھتے ہیں۔ خواب تو وہ ہوتے ہیں جو ہمیں سونے نہ دیں</p>
+  <div class="emoji"><🌕🔗🪄/div>
+  <hr />
+  <p lang="ur">جب تم اللہ سے بات کرتے ہو تو وہ پوری توجہ سے تمہاری بات سنتا ہے۔ تو یہ مت سوچو کہ تمہاری دعاوں کا جواب نہیں آئے گا۔ وہ بدلے گا تقدیریں، ہر آزمایش جلد ہی ختم ہو گی۔ ان شاء اللہ </p>
+  <div class="emoji">❤️💯🍁</div>
+  <hr />
+    <span>For more info</span> 
+ <a class="See-more" href="quotes.html">See All</a>   
   </fieldset>
   <br />
   <fieldset class="three">
