--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
  <a class="See-more" href="poetry.html">See All</a>   
     </fieldset>
   <br>
-  <fieldset class="four">
+  <fieldset class="one">
   <legend class="Main" lang="ur">مختصر پر اثر</legend>
   <p lang="ur">باتوں کو برداشت کرنے کی عادت پیدا کریں ہر بات محسوس کرنا اور موڈ خراب کر لینا بیمار دل کی علامت ہے</p>
   <div class="emoji">🤕🫀🍂</div>
@@ -69,7 +69,7 @@
   <div class="emoji">❤️💯🍁</div>
   <hr />
     <span>For more info</span> 
- <a class="See-more" href="quotes.html">See All</a>   
+ <a class="See-more" href="Quotes.html">See All</a>   
   </fieldset>
   <br />
   <fieldset class="three">
