--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div class="emoji">💐🦋✨</div>
   <hr />
   <p lang="ur">خوب وہ نہیں ہوتے جو ہم سوتے وقت دیکھتے ہیں۔ خواب تو وہ ہوتے ہیں جو ہمیں سونے نہ دیں</p>
-  <div class="emoji"><🌕🔗🪄/div>
+  <div class="emoji">🌕🔗🪄</div>
   <hr />
   <p lang="ur">جب تم اللہ سے بات کرتے ہو تو وہ پوری توجہ سے تمہاری بات سنتا ہے۔ تو یہ مت سوچو کہ تمہاری دعاوں کا جواب نہیں آئے گا۔ وہ بدلے گا تقدیریں، ہر آزمایش جلد ہی ختم ہو گی۔ ان شاء اللہ </p>
   <div class="emoji">❤️💯🍁</div>
