--- a/poetry.html
+++ b/poetry.html
@@ -4,7 +4,7 @@
 <title>Poetry | Urdu Adab</title>
 <style type="text/css" media="all">
   body{
-  background: linear-gradient(to right,#9b7dee,#3b1bb9);
+  background: linear-gradient(to right,#9b7dee,#e66405);
 }
 @font-face {
     font-family: 'MehrNastaliq';
