--- a/About.html
+++ b/About.html
@@ -119,7 +119,7 @@
   </div>
   <div class="social_media">
     <div class="linkedin">
-  <img src="Images/linkedin.png" alt="Linkedin icon" class="social_icon"> <a href="#">Linkedin</a>
+  <img src="Images/linkedin.png" alt="Linkedin icon" class="social_icon"> <a href="https://www.linkedin.com/in/murshid-abdullah-521569340">Linkedin</a>
     </div>
     <p>|</p>
     <div class="fb">
