--- a/About.html
+++ b/About.html
@@ -110,7 +110,7 @@
     </h3>
   <br />
   <br />
-    <img class="profile2" src="Images/Abdullah.jpeg" alt="An img" />
+    <img class="profile2" src="Images/Abdullah.jpg" alt="An img" />
     <br />
     <br />  
     <br />  
