--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Home | Urdu Adab</title>
-<link rel="stylesheet" href="Stylesheets/hompage.css">
+<link rel="stylesheet" href="Stylesheets/Homepage.css">
 </head>
 <body>
   
